--- a/sample/src/main/res/layout/activity_input_layout.xml
+++ b/sample/src/main/res/layout/activity_input_layout.xml
@@ -35,4 +35,9 @@
       android:layout_height="wrap_content"
       android:text="Toggle Counter" />
 
+  <Button
+      android:id="@+id/clean_error"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Clean error" />
 </LinearLayout>
