--- a/sample/src/main/res/layout/activity_test.xml
+++ b/sample/src/main/res/layout/activity_test.xml
@@ -129,6 +129,12 @@
           android:layout_height="wrap_content"
           android:text="SLIDER" />
 
+      <Button
+          android:id="@+id/text_input_layout"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="TEXT INPUT LAYOUT" />
+
       <RatingBar
           android:id="@+id/rating_bar"
           android:layout_width="wrap_content"
