Google maps extension (#37)
* init google maps

* Mock test

* add buttom mathing

* replace with rule

* Add POC google maps

* Rename test

* Fix detekt rules

* Update GoogleMapsTest.kt

* Update GoogleMapsTest.kt

* Update GoogleMapsTest.kt

* Review fixes

--- a/sample/src/main/res/layout/activity_test.xml
+++ b/sample/src/main/res/layout/activity_test.xml
@@ -130,6 +130,12 @@
           android:text="SLIDER" />
 
       <Button
+          android:id="@+id/google_maps"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="GOOGLE MAPS" />
+
+      <Button
           android:id="@+id/text_input_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
