Add options for AlertDialog

--- a/sample/src/main/res/layout/activity_alert_dialog.xml
+++ b/sample/src/main/res/layout/activity_alert_dialog.xml
@@ -10,4 +10,10 @@
       android:layout_height="wrap_content"
       android:text="Show alert dialog" />
 
+  <Button
+      android:id="@+id/show_multi_choice_dialog"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Show multi choice dialog" />
+
 </LinearLayout>
