--- a/sample/src/main/res/layout/activity_text.xml
+++ b/sample/src/main/res/layout/activity_text.xml
@@ -178,6 +178,21 @@
           android:id="@+id/text_view_multiple_clickable_spans"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
+
+      <TextView
+          android:id="@+id/text_view_drawable_span_left"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+
+      <TextView
+          android:id="@+id/text_view_drawable_span_right"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+
+      <TextView
+          android:id="@+id/text_view_drawable_span_multiple"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
     </LinearLayout>
   </ScrollView>
 </merge>
