--- a/sample/src/main/res/layout/activity_button_double_clicks.xml
+++ b/sample/src/main/res/layout/activity_button_double_clicks.xml
@@ -9,6 +9,6 @@
       android:id="@+id/button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Click me" />
+      android:text="Double click me" />
 
 </LinearLayout>
