--- a/sample/src/main/res/layout/activity_textswitcher.xml
+++ b/sample/src/main/res/layout/activity_textswitcher.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:id="@+id/top_layout">
+    android:id="@+id/top_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-  <TextSwitcher android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/text_switcher"/>
+  <TextSwitcher
+      android:id="@+id/text_switcher"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" />
 
-  <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
-          android:id="@+id/next"
-          android:text="Next"/>
+  <Button
+      android:id="@+id/next"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Next" />
 
 </LinearLayout>
