--- a/sample/src/main/res/layout/simple_fragment.xml
+++ b/sample/src/main/res/layout/simple_fragment.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
   <TextView
+      android:id="@+id/text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:textSize="128dp"
-      tools:text="1"
-      android:textColor="@android:color/black"
       android:layout_gravity="center"
-      android:id="@+id/text"/>
+      android:textColor="@android:color/black"
+      android:textSize="128dp"
+      tools:text="1" />
 
 </FrameLayout>
