--- a/sample/src/main/res/layout/activity_test.xml
+++ b/sample/src/main/res/layout/activity_test.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+                                           android:id="@+id/drawer_layout"
+                                           android:layout_width="match_parent"
+                                           android:layout_height="match_parent"
+                                           android:fitsSystemWindows="true">
 
   <ScrollView
       android:layout_width="match_parent"
@@ -19,19 +19,116 @@
           android:id="@+id/text_view_large"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="LARGE" />
+          android:text="LARGE"/>
 
       <TextView
           android:id="@+id/text_view_small"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="small" />
+          android:text="small"/>
 
       <TextView
           android:id="@+id/text_view_hint"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:hint="hint" />
+          android:hint="hint"/>
+
+      <GridLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:columnCount="3">
+
+        <Button
+            android:id="@+id/single_type_recycler"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SINGLE TYPE RECYCLER"/>
+
+        <Button
+            android:id="@+id/multi_type_recycler"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MULTI TYPE RECYCLER"/>
+
+        <Button
+            android:id="@+id/auto_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AUTO_COMPLETE"/>
+
+        <Button
+            android:id="@+id/drawableList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DRAWABLE LIST"/>
+
+        <Button
+            android:id="@+id/spinner_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SPINNER"/>
+
+        <Button
+            android:id="@+id/web_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="WEB_BUTTON"/>
+
+        <Button
+            android:id="@+id/view_pager_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="VIEW PAGER 2"/>
+
+        <Button
+            android:id="@+id/snackbar_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SNACKBAR"/>
+
+        <Button
+            android:id="@+id/picker_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PICKERS"/>
+
+        <Button
+            android:id="@+id/alert_dialog_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ALERT DIALOG"/>
+
+        <Button
+            android:id="@+id/slider_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SLIDER"/>
+
+        <Button
+            android:id="@+id/google_maps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="GOOGLE MAPS"/>
+
+        <Button
+            android:id="@+id/text_input_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TEXT INPUT LAYOUT"/>
+
+        <Button
+            android:id="@+id/text_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TEXT VIEWS"/>
+
+        <Button
+            android:id="@+id/switchers_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SWITCHERS"/>
+
+      </GridLayout>
 
       <LinearLayout
           android:layout_width="match_parent"
@@ -42,13 +139,13 @@
             android:id="@+id/button_view_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="left" />
+            android:text="left"/>
 
         <Button
             android:id="@+id/button_view_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="right" />
+            android:text="right"/>
       </LinearLayout>
 
       <TextView
@@ -56,108 +153,12 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="colored"
-          android:textColor="@color/background_color" />
+          android:textColor="@color/background_color"/>
 
       <ImageView
           android:id="@+id/map"
           android:layout_width="48dp"
-          android:layout_height="48dp" />
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/single_type_recycler"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SINGLE TYPE RECYCLER" />
-
-        <Button
-            android:id="@+id/multi_type_recycler"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MULTI TYPE RECYCLER" />
-      </LinearLayout>
-
-      <Button
-          android:id="@+id/auto_complete"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="AUTO_COMPLETE" />
-
-      <Button
-          android:id="@+id/drawableList"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="DRAWABLE LIST" />
-
-      <Button
-          android:id="@+id/spinner_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="SPINNER" />
-
-      <Button
-          android:id="@+id/web_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="WEB_BUTTON" />
-
-      <Button
-          android:id="@+id/view_pager_2"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="VIEW PAGER 2" />
-
-      <Button
-          android:id="@+id/snackbar_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="SNACKBAR" />
-
-      <Button
-          android:id="@+id/picker_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="PICKERS" />
-
-      <Button
-          android:id="@+id/alert_dialog_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="ALERT DIALOG" />
-
-      <Button
-          android:id="@+id/slider_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="SLIDER" />
-
-      <Button
-          android:id="@+id/google_maps"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="GOOGLE MAPS" />
-
-      <Button
-          android:id="@+id/text_input_layout"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="TEXT INPUT LAYOUT" />
-
-      <Button
-          android:id="@+id/text_activity"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="TEXT VIEWS" />
-
-      <Button
-          android:id="@+id/switchers_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="SWITCHERS" />
+          android:layout_height="48dp"/>
 
       <RatingBar
           android:id="@+id/rating_bar"
@@ -165,7 +166,7 @@
           android:layout_height="wrap_content"
           android:numStars="5"
           android:rating="0"
-          android:stepSize="1" />
+          android:stepSize="1"/>
 
       <SeekBar
           android:id="@+id/seek_bar"
@@ -174,7 +175,7 @@
           android:max="100"
           android:paddingLeft="32dp"
           android:paddingRight="32dp"
-          android:progress="70" />
+          android:progress="70"/>
 
       <Switch
           android:id="@+id/switch_view"
@@ -183,7 +184,7 @@
           android:checked="true"
           android:paddingLeft="32dp"
           android:paddingRight="32dp"
-          android:text="Switch" />
+          android:text="Switch"/>
 
       <androidx.appcompat.widget.SwitchCompat
           android:id="@+id/switch_compat"
@@ -192,7 +193,7 @@
           android:checked="true"
           android:paddingLeft="32dp"
           android:paddingRight="32dp"
-          android:text="Switch compat" />
+          android:text="Switch compat"/>
 
       <androidx.core.widget.NestedScrollView
           android:layout_width="match_parent"
@@ -202,7 +203,7 @@
             android:id="@+id/nested_scroll_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Text in a nested scroll view" />
+            android:text="Text in a nested scroll view"/>
 
       </androidx.core.widget.NestedScrollView>
 
@@ -210,7 +211,7 @@
           android:id="@+id/search_view"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:hint="@string/hint" />
+          android:hint="@string/hint"/>
     </LinearLayout>
   </ScrollView>
 
@@ -225,7 +226,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Slide Menu Item" />
+        android:text="Slide Menu Item"/>
 
   </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
