Add a button to open new activity

--- a/sample/src/main/res/layout/activity_test.xml
+++ b/sample/src/main/res/layout/activity_test.xml
@@ -122,6 +122,12 @@
             android:layout_height="wrap_content"
             android:text="SWITCHERS"/>
 
+        <Button
+            android:id="@+id/flexbox_chips_type_recycler"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FLEXBOX CHIPS"/>
+
       </GridLayout>
 
       <LinearLayout
